...
                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                        <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                        <toolbar key="tableFooterView" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="Tjw-W6-hiS">
                            <rect key="frame" x="0.0" y="192" width="600" height="44"/>
                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                            <items>
                                <barButtonItem title="Show Data" width="92" id="WfG-fB-XXG">
                                    <connections>
                                        <action selector="displayData:" destination="Htf-Q0-Vo4" id="4tQ-aQ-ZbJ"/>
                                    </connections>
                                </barButtonItem>
                                <barButtonItem style="plain" systemItem="flexibleSpace" id="KWG-IH-f6Q"/>
                            </items>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <toolbar key="tableFooterView" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="9gE-dq-DBc">
                            <rect key="frame" x="0.0" y="136" width="600" height="44"/>
                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                            <items>
                                <barButtonItem title="Medical History" id="Ku5-iG-kDK">
                                    <connections>
                                        <action selector="toMedicalHistory:" destination="OH1-dH-1c6" id="SKX-nI-ffh"/>
                                    </connections>
                                </barButtonItem>
                            </items>
                        </toolbar>
...
                                <barButtonItem title="Assess" id="ReC-Mn-bdo">
                                    <connections>
                                        <action selector="assessPatient:" destination="HGz-o7-IYd" id="Pad-qx-8YO"/>
                                    </connections>
                                </barButtonItem>
                                <barButtonItem style="plain" systemItem="flexibleSpace" id="2HD-pc-VgZ"/>
                                <barButtonItem title="Assessments" id="ZIy-ls-p05">
                                    <connections>
                                        <action selector="showAssessments:" destination="HGz-o7-IYd" id="V8h-V8-QSe"/>
                                    </connections>
                                </barButtonItem>
                            </items>
                        </toolbar>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="afr-uS-Ljd" id="cUk-k0-sVF"/>
                            <outlet property="delegate" destination="afr-uS-Ljd" id="8iH-ag-zef"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Contact Times" id="StY-Le-Pq7">
                        <barButtonItem key="leftBarButtonItem" systemItem="done" id="6NV-21-uJk">
                            <connections>
                                <action selector="finishedListing:" destination="afr-uS-Ljd" id="wkh-Fi-Mjj"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
