...
        NSUserDefaults *defaults = [NSUserDefaults standardUserDefaults];
        // removed in-app support for iCloud.
       // BOOL iCloudEnabled = [[defaults valueForKey:@"iCloudSupport_unlocked"]boolValue];
        BOOL iCloudEnabled = [[defaults valueForKey:@"iCloudEnabled"]boolValue];
        if(iCloudEnabled) {
        UIAlertController *alert = [UIAlertController alertControllerWithTitle:@"iCloud is ON! Your data is being synched to all of your devices." message:@"The item can't be deleted here. To delete it, turn off iCloud Backup in Settings." preferredStyle:UIAlertControllerStyleAlert];
        UIAlertAction *ok =[UIAlertAction actionWithTitle:@"Press any key to continue" style:UIAlertActionStyleDefault handler:^(UIAlertAction * action){
            [self dismissViewControllerAnimated:YES completion:nil];

        }];
        /*
        UIAlertAction* cancel = [UIAlertAction actionWithTitle:@"No" style:UIAlertActionStyleDefault
                                                       handler:^(UIAlertAction * action) {
...
