...
                            <color key="titleColor" red="0.0" green="0.89019614459999996" blue="0.16078431900000001" alpha="1" colorSpace="deviceRGB"/>
                            <connections>
                                <action selector="Start" destination="AgC-eL-Hgc" id="aHU-MX-oeB"/>
                            </connections>
                        </button>
                        <label width="1" alignment="left" verticalAlignment="center" text="Elapsed Time" textAlignment="center" id="vcV-bo-uNs"/>
                        <button width="90" height="26.5" alignment="center" verticalAlignment="bottom" title="Stop" id="g1a-AD-Rdf">
                            <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
                                <action selector="Stop" destination="AgC-eL-Hgc" id="KHf-e8-sR2"/>
                            </connections>
                        </button>
                    </items>
...
